Added "Fork me on github" ribbon
Implementation from simonwhitaker, see https://github.com/simonwhitaker/github-fork-ribbon-css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,27 @@
 <header class="site-header">
+  <div class="github-fork-ribbon-wrapper right">
+    <div class="github-fork-ribbon">
+      <a href="https://github.com/OpenPythia/OpenPythia">Fork me on GitHub</a>
+    </div>
+  </div>
 
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{{ site.baseurl }}">OpenPythia</a>
-                </div>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{{ site.baseurl }}">OpenPythia</a>
+      </div>
 
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="{{ site.baseurl }}getting_started/">Getting started</a></li>
-                        <li><a href="{{ site.baseurl }}news/">News and update notes</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="{{ site.baseurl }}getting_started/">Getting started</a></li>
+          <li><a href="{{ site.baseurl }}news/">News and update notes</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
