--- a/css/main.scss
+++ b/css/main.scss
@@ -38,5 +38,6 @@ $on-laptop:        800px;
         "bootstrap/_bootstrap",
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "gh-fork-ribbon.css"
 ;
