changed "impress" to "imprint"

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
         <p class="text">{{ site.description }}</p>
       </div>
       <div class="footer-col pull-right">
-        <a href="{{ site.baseurl }}impress/">Impress</a>
+        <a href="{{ site.baseurl }}imprint/">Imprint</a>
       </div>
     </div>
 
