fix white font for firefox after link has been visited

--- a/css/gh-fork-ribbon.css
+++ b/css/gh-fork-ribbon.css
@@ -35,6 +35,7 @@
 }
 
 .github-fork-ribbon a,
+.github-fork-ribbon a:visited,
 .github-fork-ribbon a:hover {
   /* Set the text properties */
   color: #fff;
