--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,5 +15,27 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ "favicons/apple-touch-icon-57x57.png" | prepend: site.baseurl }}" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ "favicons/apple-touch-icon-114x114.png" | prepend: site.baseurl }}" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ "favicons/apple-touch-icon-72x72.png" | prepend: site.baseurl }}" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "favicons/apple-touch-icon-144x144.png" | prepend: site.baseurl }}" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ "favicons/apple-touch-icon-60x60.png" | prepend: site.baseurl }}" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ "favicons/apple-touch-icon-120x120.png" | prepend: site.baseurl }}" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ "favicons/apple-touch-icon-76x76.png" | prepend: site.baseurl }}" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ "favicons/apple-touch-icon-152x152.png" | prepend: site.baseurl }}" />
+    <link rel="icon" type="image/png" href="{{ "favicons/favicon-196x196.png" sizes="196x196" | prepend: site.baseurl }}" />
+    <link rel="icon" type="image/png" href="{{ "favicons/favicon-96x96.png" sizes="96x96" | prepend: site.baseurl }}" />
+    <link rel="icon" type="image/png" href="{{ "favicons/favicon-32x32.png" sizes="32x32" | prepend: site.baseurl }}" />
+    <link rel="icon" type="image/png" href="{{ "favicons/favicon-16x16.png" sizes="16x16" | prepend: site.baseurl }}" />
+    <link rel="icon" type="image/png" href="{{ "favicons/favicon-128.png" sizes="128x128" | prepend: site.baseurl }}" />
+    <meta name="application-name" content="OpenPythia"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF"/>
+    <meta name="msapplication-TileImage" content="{{ "favicons/mstile-144x144.png" | prepend: site.baseurl }}" />
+    <meta name="msapplication-square70x70logo" content="{{ "favicons/mstile-70x70.png" | prepend: site.baseurl }}" />
+    <meta name="msapplication-square150x150logo" content="{{ "favicons/mstile-150x150.png" | prepend: site.baseurl }}" />
+    <meta name="msapplication-wide310x150logo" content="{{ "favicons/mstile-310x150.png" | prepend: site.baseurl }}" />
+    <meta name="msapplication-square310x310logo" content="{{ "favicons/mstile-310x310.png" | prepend: site.baseurl }}" />
+
+
     {% include google_analytics.html %}
 </head>
